# isa

./: hello.asm  isa.txt  run.sh
assembler/: Cargo.toml  instruction.rs  test.asm
assembler/src/: convert.rs  instruction.rs  main.rs  opcode.rs  parse.rs  util.rs
compiler/: IR.hs  Main.hs  compiler.cabal  test.lam
compiler/hask/: AST.hs  ASTUtil.hs  IR.hs  Main.hs  Parser.hs  Preprocess.hs  test.lam
compiler/imp/: .gitignore  Makefile  TODO.txt  arrays.simp  assemble.cpp  assemble.h  ast.cpp  ast.h  cat.simp  chars.simp  compiler.pl  epilogue.asm  epilogue.asm.h  error.cpp  error.h  ir.cpp  ir.h  ir_builder.cpp  ir_builder.h  ir_order.cpp  ir_order.h  live_analysis.cpp  live_analysis.h  liveness_analysis.pl  loop.simp  main.cpp  notes-live.txt  optimiser.cpp  optimiser.h  parser.cpp  parser.h  print_asm.cpp  print_asm.h  prologue.asm  prologue.asm.h  regalloc.cpp  regalloc.h  regalloc.pl  semantics.txt  site.cpp  (+10 more)
compiler/imp-pl/: compiler.pl  regalloc.pl
compiler/imp/malloc/: Makefile  malloc.c
emulator/: Cargo.toml
emulator/src/: cpu.rs  debug.rs  instruction.rs  main.rs  memory.rs  opcode.rs  registers.rs
