name:          compiler
version:       0.1.0
cabal-version: >= 1.10
build-type:    Simple
license:       MIT
author:        Tom Smeding
maintainer:    tom.smeding@gmail.com

executable            compiler
    hs-source-dirs:   .
    main-is:          Main.hs
    default-language: Haskell2010
    ghc-options:      -Wall -O3
    build-depends:    base >= 4 && < 5, containers, parsec, mtl
    other-modules:    AST, Parser, IR, ASTUtil, Preprocess
